apply plugin: 'java'
apply plugin: 'com.google.protobuf'
apply plugin: 'idea'
apply plugin: 'application'
apply plugin: 'com.github.johnrengelman.shadow'

group 'com.swirlds.recordsloader'
version '1.0-SNAPSHOT'

//sourceCompatibility = 1.17
//targetCompatibility = 1.17
java.toolchain.languageVersion = JavaLanguageVersion.of(17)
//java {
//	toolchain {
//		languageVersion JavaLanguageVersion.of(17)
//	}
//}

repositories {
	maven { url "https://plugins.gradle.org/m2/" }
	mavenCentral()
}

buildscript {
	repositories {
		maven { url "https://plugins.gradle.org/m2/" }
	}
	dependencies {
		classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.18'
		classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
	}
}

application {
	mainClass.set('com.swirlds.streamloader.StreamDownloaderMain')
}

dependencies {
	implementation 'com.google.protobuf:protobuf-java:3.19.4'
	implementation 'com.google.cloud:google-cloud-storage:1.91.0'
	implementation 'javax.json:javax.json-api:1.1.4'
	implementation 'org.glassfish:javax.json:1.1.4'
	implementation 'org.apache.kafka:kafka-clients:3.2.0'
	implementation 'org.jetbrains:annotations:20.1.0'
}

sourceSets {
	main {
		proto {
			srcDir 'hedera-protobufs/services'
		}
	}
}

shadowJar {
	archiveBaseName.set('bigdataLoader')
}


tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}